@@ -34,9 +34,12 @@ def main():
     templ = "%-17s %8s %8s %8s %5s%% %9s  %s"
     print_(templ % ("Device", "Total", "Used", "Free", "Use ", "Type", "Mount"))
     for part in psutil.disk_partitions(all=False):
-        if os.name == 'nt' and 'cdrom' in part.opts:
-            # may raise ENOENT if there's no cd-rom in the drive
-            continue
+        if os.name == 'nt':
+            if 'cdrom' in part.opts or part.fstype == '':
+                # skip cd-rom drives with no disk in it; they may raise
+                # ENOENT, pop-up a Windows GUI error for a non-ready
+                # partition or just hang.
+                continue
         usage = psutil.disk_usage(part.mountpoint)
         print_(templ % (part.device,
                         bytes2human(usage.total),
